--- a/themes/fluid/layout/_partials/head.ejs
+++ b/themes/fluid/layout/_partials/head.ejs
@@ -15,8 +15,8 @@ var ogConfig = Object.assign({ image: ogImage && url_for(ogImage) }, theme.open_
 
 <head>
   <meta charset="UTF-8">
-  <link rel="dns-prefetch" href="//cdn.bootcss.com" />
-  <link rel="dns-prefetch" href="//cdn.mathjax.org" />
+  <!-- <link rel="dns-prefetch" href="//cdn.bootcss.com" /> -->
+  <!-- <link rel="dns-prefetch" href="//cdn.mathjax.org" /> -->
   <link rel="apple-touch-icon" sizes="76x76" href="<%= url_for(theme.apple_touch_icon) %>">
   <link rel="icon" href="<%= url_for(theme.favicon) %>">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, shrink-to-fit=no">
