--- a/themes/cactus/source/css/_partial/header.styl
+++ b/themes/cactus/source/css/_partial/header.styl
@@ -37,13 +37,13 @@
     letter-spacing: .01em
     font-weight: 200
     font-style: normal
-    font-size: .8rem
+    font-size: 1.2rem
 
     ul
       margin: 0
       padding: 0
       list-style-type: none
-      line-height: 15px
+      line-height: 22px
 
       a
         margin-right: 15px
@@ -55,7 +55,7 @@
       li
         display: inline-block
         margin-right: 15px
-        border-right: 1px dotted
+        border-right: 1px solid
         border-color: $color-accent-1
         vertical-align: middle
 
@@ -113,4 +113,4 @@ if $logo-grayout
     li:not(:first-child)
       padding-top: 1rem
       padding-left: $logo-width + 20px
-      font-size: 1rem
+      font-size: 2rem
