--- a/themes/cactus/layout/_partial/comments.ejs
+++ b/themes/cactus/layout/_partial/comments.ejs
@@ -1,14 +1,16 @@
 <% if(page.comments && theme.disqus.enabled){ %>
-    <div class="blog-post-comments">
-        <div id="disqus_thread">
-            <noscript><%= __('comments.no_js') %></noscript>
-        </div>
-    </div>
+<div class="blog-post-comments">
+  <div id="disqus_thread">
+    <noscript><%= __('comments.no_js') %></noscript>
+  </div>
+</div>
 <% } %>
 <% if(page.comments && theme.utterances.enabled){ %>
-    <div class="blog-post-comments">
-        <div id="utterances_thread">
-            <noscript><%= __('comments.no_js') %></noscript>
-        </div>
-    </div>
+<div class="blog-post-comments">
+  <noscript><%= __('comments.no_js') %></noscript>
+  <div id="utterances_thread">
+    <!-- <script src="https://utteranc.es/client.js" repo="Andrew-Rey/gitalkds" issue-term="pathname" theme="github-dark" crossorigin="anonymous" async>
+    </script> -->
+  </div>
+</div>
 <% } %>
